Fixed sizing on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    /* border: 1px solid; */
 }
 
 @font-face {
@@ -11,54 +12,61 @@
 
 :root {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 10px;
+    font-size: 16px;
     --prime-color: #596D48;
 }
 
 body {
-    background: radial-gradient(white, var(--prime-color))
+    background: radial-gradient(white, var(--prime-color));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 main {
-    height: 100vh;
-    display: flex;
+    height: inherit;
+    display: inherit;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+}
+
+footer {
+    width: 100%;
+    background-color: #596D48;
+    text-align: center;
+    padding: 0.5rem;
 }
 .container {
-    max-width: 800px;
-    min-height: 600px;
-    border-radius: 20px;
     display: flex;
+    max-width: 850px;
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.2);
+    min-height: 60vh
 }
 
 .sidebar {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-image:url("images/halie-west-25xggax4bSA-unsplash.jpg");
-    background-color: #857d7d;
-    background-repeat: round;
-    flex: 0 0 35%;
+    background: url(images/halie-west-25xggax4bSA-unsplash.jpg) no-repeat;
+    background-size: cover;
+    flex: 3;
+    justify-content: space-between;
     position: relative;
-    border-top-left-radius: inherit;
-    border-bottom-left-radius: inherit;
+    align-items: center;
 }
 
 .sidebarTitle {
     display: flex;
     font-size: 64px;
-    gap: 0rem;
-    position: absolute;
-    top: 40%;
     width: 100%;
     justify-content: center;
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 1rem;
     font-family: norse;
+    position: absolute;
+    top: 40%;
 }
 
 .sidebarLogo {
@@ -68,123 +76,117 @@ main {
 .sidebarLogo > img {
     object-fit: cover;
     height: 100%;
-    
 }
 
 .photoSign {
-    position: absolute;
-    bottom: 0px;
     color: white;
-    padding: 0.5rem;
+    font-size: 0.8rem;
+    position: absolute;
+    bottom: 1rem;
 }
 
 .sidebar a,
-.sidebar a:visited
-.sidebar a:hover {
+.sidebar a:visited {
     color: white;
+    text-decoration: none;
 }
 
 .content {
     display: flex;
     flex-direction: column;
-    font-size: 1.5rem;
-    gap: 4rem;
-    
-    margin-top: auto;
-    margin-bottom: auto;
-    
-    
+    flex: 5;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem 0;
+   
 }
 
-.contentText, fieldset {
-    padding-left: 3rem;
+.contentText {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    gap: 1rem;
+    font-weight: 500;
 }
 
-.content p {
-    margin-top: 1rem;
-    font-weight: bold;
-    padding-right: 3rem;
-}
+/* forms */
 
-.content a,
-.content a:visited {
-    color: var(--prime-color);
-    text-decoration: none;
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
-
-/* Forms */
 
 fieldset {
+    
+    border: none;
+    padding: 2rem 2rem;
     background-color: white;
     border: none;
     box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.2);
-    position:relative;
-    
 }
-fieldset > ul {
+
+ul {
     display: flex;
-    list-style: none;
     flex-wrap: wrap;
-    gap: 2rem;
-    padding: 2rem 2rem 2rem 0rem;
-    
+    list-style: none;
     
 }
 
-fieldset li {
+ul > p {
+    width: 100%;
+    font-weight: 500;
+}
+
+li {
+    margin-top: 1rem; 
     margin-right: 4rem;
+    flex: 1 1 30%;
+    min-width: 150px;
 }
 
 label {
     display: block;
-    font-size: 1rem;
+    font-size: 0.7rem;
     text-transform: uppercase;
-    margin-bottom: 2px;
-    font-weight: bold;
-    color: hsl(0, 0%, 40%);
-}
-
-.help, .ps {
-    color: red;
-    display: none;
-    font-size: 1rem;
-
-    
-}
-
-.invalid .help {
-    display: block;
-  }
-  
-
-.nomatch .ps {
-    display: block;
+    letter-spacing: 1px;
+    padding: 2px;
 }
 
 input {
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     border-radius: 5px;
     border: 1px solid #E5E7EB;
     padding: 1ch 1ch;
     outline: none;
+    width: 100%;
 }
 
 input:focus {
     border: 1px solid var(--prime-color);
 }
 
-/* input:invalid {
+.invalid input {
     border: 1px solid red;
-} */
+}
 
-button + p {
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
+.help, .ps {
+    color: red;
+    display: none;
+    font-size: 0.65rem;
+    position: absolute;  
+}
+
+.invalid .help {
+    display: block;
+  }
+  
+.nomatch .ps {
+    display: block;
 }
 
 button {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
     padding: 1rem 3rem;
     border: none;
     border-radius: 5px;
@@ -193,20 +195,69 @@ button {
     cursor: pointer;
     font-weight: bold;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
+    width: 200px
 }
 
-@media (max-width: 750px) {
+.content a,
+.content a:visited {
+    color: var(--prime-color);
+    text-decoration: none;
+}
+
+/* for mobile */
+
+@media (max-height: 600px) {
+    body {
+        height: auto;
+    }
+    .container {
+        max-width: 100vw;
+    } 
+}
+
+@media (max-width: 600px) {
+    body {
+        height: auto;
+    }
     .container {
         flex-direction: column;
-        height: 100%;
-        border-radius: 0;
+        min-height: auto;
     }
 
-  
-
-    .sidebarTitle {
-        top: 0;
+    .sidebar {
+        min-height: 30vh;
+        
     }
-    
-    
+
+    .content {
+       min-height: auto;
+    }
+
+    .contentText {
+        align-items: center;
+    }
+
+    ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    ul > p {
+        width: auto;
+    }
+
+    li {
+        width: 70vw;
+        flex: auto;
+        margin-right: 0;
+    }
+
+    button {
+        width: 60vw;
+    }
 }
+
+
+
+
+
